refactor: apply clean code practices to writing and wordle flows
- GroqService: extract named constants, break analyzeWriting into
  intention-revealing methods, replace throws Exception with
  JsonProcessingException, deduplicate RestTemplate call
- WordleService/Controller: named MAX_ATTEMPTS/WORD_LENGTH constants,
  deduplicate ownership check into requireOwnership()
- writing/wordle pages: replace err:any with typed unknown handling,
  extract magic numbers to constants, extract ScoreRing component
- gitignore: exclude local opencode.json